// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExperimentComponent if experiment was not saved should show the experiment form 1`] = `
<div
  id="root0"
>
  
  <div
    class="experiment"
  >
    <em-experiment-info />
    
    <div
      class="experiment-status-wrapper"
    >
      <em-experiment-status-message
        class="qa-experiment-status-message"
      />
      <em-experiment-status-chart />
    </div>
    
    
    <mat-divider />
    <div
      class="actions"
    >
      <button
        class="save-button qa-save"
        color="primary"
        mat-stroked-button=""
      >
         COMPLETE_EXPERIMENT 
      </button>
    </div>
  </div>
  
</div>
`;

exports[`ExperimentComponent if experiment was saved should show the experiment 1`] = `
<div
  id="root12"
>
  
  <div
    class="experiment"
  >
    <em-experiment-info />
    
    <div
      class="experiment-status-wrapper"
    >
      <em-experiment-status-message
        class="qa-experiment-status-message"
      />
      <em-experiment-status-chart />
    </div>
    
    
    <mat-divider />
    <div
      class="actions"
    >
      <button
        class="save-button qa-save"
        color="primary"
        mat-stroked-button=""
      >
         COMPLETE_EXPERIMENT 
      </button>
    </div>
  </div>
  
</div>
`;
